--- a/app/src/main/res/layout/item_deudor.xml
+++ b/app/src/main/res/layout/item_deudor.xml
@@ -3,55 +3,61 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark"
+    android:padding="2dp"
     tools:context=".ui.List.ListFragment">
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="1dp"
-        android:background="@color/design_default_color_background"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
-
-        <TextView
-            android:id="@+id/tv_nombre"
-            android:layout_width="241dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="1dp"
-            android:layout_weight="1"
-            android:background="@color/design_default_color_background"
-            android:gravity="center_vertical"
-            android:text="@string/nombre_deudor"
-            android:textAlignment="viewStart"
-            android:textColor="@color/design_default_color_on_secondary"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_deuda"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="1dp"
-            android:layout_weight="1"
-            android:background="@color/design_default_color_background"
-            android:gravity="center_vertical"
-            android:text="@string/deuda"
-            android:textAlignment="textEnd"
-            android:textColor="@color/design_default_color_error"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-    </LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="4dp">
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="0dp">
+
+            <ImageView
+                android:id="@+id/iv_foto"
+                android:layout_width="80dp
+"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:src="@drawable/splash" />
+
+            <TextView
+                android:id="@+id/tv_nombre"
+                android:layout_width="236dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/design_default_color_background"
+                android:gravity="center_vertical"
+                android:text="@string/nombre_deudor"
+                android:textAlignment="viewStart"
+                android:textColor="@color/design_default_color_on_secondary"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                tools:ignore="RtlCompat" />
+
+            <TextView
+                android:id="@+id/tv_cantidad"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/design_default_color_background"
+                android:gravity="center_vertical"
+                android:text="@string/deuda"
+                android:textAlignment="textStart"
+                android:textColor="@color/design_default_color_error"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                tools:ignore="RtlCompat" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
